Example one done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
+    <h2>Grids with specific positioning</h2>
+    <p>specific as to where position is and how big area the vild elements take.</p>
 
+    <div class="container">
+        <section class="item-a">Item A</section>
+        <section class="item-b">Item B</section>
+        <section class="item-c">Item C</section>
+    </div>
 </body>
 
 </html>
